--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
     font-family: "Roboto Mono", monospace;
     font-optical-sizing: auto;
+}
+
+.home header {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
 }
