--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,29 @@
     justify-content: flex-end;
     gap: 20px;
 }
+
+.dashboard {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+.dashboard aside {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 5%;
+}
+
+.dashboard section {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 5%;
+}
