--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -41,3 +41,18 @@ main section .glass {
     height: 60px;
     background-color: rgba(53, 6, 6, 0.193);
 }
+
+.container {
+    margin-top: 5%;
+    padding: 1%;
+}
+
+.btn-create {
+    margin: 20px;
+    position: absolute;
+    top: 6%;
+}
+
+.container div{
+    margin-top: 5%;
+}
